Fix layout issue

--- a/src/scss/common/questions.scss
+++ b/src/scss/common/questions.scss
@@ -16,6 +16,16 @@
   }
 }
 
+.content-value {
+  > .row {
+    margin: 0;
+    > .col {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
+}
+
 .unit-dropdown button {
   min-width: auto;
 }
